# JobCopilot

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  langgraph.json  pyproject.toml
.claude/: settings.json
docs/: PRD.md  (+2 more)
services/discovery/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/discovery/alembic/: env.py
services/discovery/alembic/versions/: 0001_init_discovery_schema.py  0002_company_boards_column.py
services/discovery/app/: deps.py  main.py
services/discovery/app/models/: __init__.py
services/discovery/app/repositories/: config_repo.py  run_repo.py
services/discovery/app/routers/: configs.py  runs.py
services/discovery/app/schemas/: discovery.py
services/discovery/app/services/: linkedin_scraper.py  publisher.py
services/discovery/app/worker/: activities.py  worker.py
services/discovery/src/jobcopilot_discovery/: config.py  deps.py  main.py
services/discovery/tests/: test_scraper_utils.py  test_sources.py
services/job/: .env.example  Dockerfile  pyproject.toml
services/job/alembic/: env.py
services/job/alembic/versions/: 0001_init_job_schema.py  0002_strip_html_from_discovery_raw_jd.py
services/job/app/: deps.py  main.py
services/job/app/models/: __init__.py  application_event.py
services/job/app/repositories/: application_repo.py  company_repo.py  job_repo.py
services/job/app/routers/: applications.py  companies.py  internal.py  jobs.py
services/job/app/schemas/: job.py
services/job/src/jobcopilot_job/: config.py  deps.py  main.py
services/job/tests/: test_application_repository.py  test_job_repository.py  test_state_machine.py
services/profile/: .env.example  Dockerfile  pyproject.toml
services/profile/alembic/: env.py
services/profile/alembic/versions/: 0001_init_profile_schema.py  0002_drop_linkedin_cookie.py
services/profile/app/: deps.py  main.py
services/profile/app/models/: __init__.py  profile.py
services/profile/app/repositories/: profile_repo.py  resume_repo.py
services/profile/app/routers/: internal.py  profiles.py  resumes.py
services/profile/tests/: conftest.py  test_llm_key_mode.py  test_llm_key_validation.py  test_profile_repository.py  test_resume_parser.py
(+262 files in other folders)
