[project]
name = "discovery-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "temporalio>=1.6.0",
    "playwright>=1.44.0",
    "aio-pika>=9.4.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "jobcopilot-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobcopilot_discovery"]

[tool.uv.sources]
jobcopilot-shared = { workspace = true }
